# twixt_ai

./: .gitignore  CMakeLists.txt  Makefile  README.md  game.c  game.h  game_serializer.l  game_serializer.y  main.c  montecarlo.c  montecarlo.h  rand.c  rand.h  serializer.c  serializer.h  twixt.c  twixt.h  zobrist.c  zobrist.h
